Fix title alignment at 320px viewport

--- a/.vuepress/style.styl
+++ b/.vuepress/style.styl
@@ -51,3 +51,12 @@ color: #03cea4;
 a {
 color: #e50066;
 }
+
+@media (max-width: 719px) {
+    .sidebar-button {
+        left: .6rem;
+    }
+    .navbar {
+        padding-left: 3.4rem;
+    }
+}
